ops/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: web
spec:
  containers:
    - name: interview-room
      image: bitwiselearn/codex:js-container
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8443
        - containerPort: 8000
