ops/service.yml
apiVersion: v1
kind: Service
metadata:
  name: interview-room-service
spec:
  type: ClusterIP
  selector:
    app: interview-room
  ports:
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
    - name: app
      port: 8000
      targetPort: 8000
      protocol: TCP
