ops/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interview-room-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-wildcard
spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - "*.code.angadsudan.me"
    - "*.output.angadsudan.me"
    secretName: interview-room-tls

  rules:
  - host: "*.code.angadsudan.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: interview-room-service
            port:
              number: 8443

  - host: "*.output.angadsudan.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: interview-room-service
            port:
              number: 8000
